fix: align DS modal close buttons

--- a/src/bundle/Resources/public/scss/_modals.scss
+++ b/src/bundle/Resources/public/scss/_modals.scss
@@ -25,6 +25,10 @@
             & {
                 padding: calculateRem(2px);
             }
+
+            &.ids-btn {
+                top: calculateRem(22px);
+            }
         }
     }
 
